--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit>=1.30,<2
-requests>=2.31
+streamlit>=1.30
+pandas>=1.5
+numpy>=1.23
+requests>=2.28
 python-dotenv>=1.0
-joblib>=1.3
-pandas>=2.1
-scikit-learn>=1.3
-streamlit-tags
+joblib>=1.2
+scikit-learn>=1.2
+streamlit-searchbox>=0.1.6
