--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit>=1.30
-pandas>=1.5
-numpy>=1.23
-requests>=2.28
-python-dotenv>=1.0
-joblib>=1.2
-scikit-learn>=1.2
-streamlit-searchbox>=0.1.6
+streamlit==1.32.2
+pandas==2.1.4
+numpy==1.26.4
+requests==2.31.0
+python-dotenv==1.0.1
+joblib==1.3.2
+scikit-learn==1.3.2
+streamlit-searchbox==0.1.6
